# catalog

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: prepare-image-context.sh  prepare-local.sh
src/: api.rs  config.rs  lib.rs  main.rs  model.rs  store.rs  templates.rs  web.rs
src/model/: create_sku.rs  sku.rs  sku_component.rs  sku_form.rs  sku_kind.rs  update_sku.rs
src/store/: catalog_store.rs  store_error.rs
src/templates/: component_line.rs  component_option.rs  form_template.rs  form_values.rs  index_template.rs  sku_ref.rs  sku_row.rs
templates/: form.html  index.html
